[image-provider]: replace bookworm image with nonroot alpine image (#2193)
Signed-off-by: Gerard Vanloo <gerard.vanloo@ibm.com>
Co-authored-by: Juliano Costa <julianocosta89@outlook.com>

--- a/src/image-provider/Dockerfile
+++ b/src/image-provider/Dockerfile
@@ -1,23 +1,28 @@
 # Copyright The OpenTelemetry Authors
 # SPDX-License-Identifier: Apache-2.0
 
-FROM nginx:1.27.0-otel
+FROM nginxinc/nginx-unprivileged:1.27.5-alpine3.21
 
-RUN apt-get update ; apt-get install lsb-release --no-install-recommends --no-install-suggests -y
+USER 0
 
-# This file is needed for nginx-module-otel to be found.
-RUN echo "deb [signed-by=/usr/share/keyrings/nginx-archive-keyring.gpg] http://nginx.org/packages/mainline/debian `lsb_release -cs` nginx" | tee /etc/apt/sources.list.d/nginx.list
+RUN printf "%s%s%s%s\n" \
+    "@nginx " \
+    "http://nginx.org/packages/mainline/alpine/v" \
+    `egrep -o '^[0-9]+\.[0-9]+' /etc/alpine-release` \
+    "/main" \
+    | tee -a /etc/apk/repositories
 
-RUN apt-get update ; apt-get install nginx-module-otel --no-install-recommends --no-install-suggests -y
+RUN apk update && \
+    apk add nginx-module-otel@nginx
 
-RUN mkdir /static
-COPY src/image-provider/static /static
+USER 101
+
+COPY src/image-provider/static/ /static/
+COPY src/image-provider/nginx.conf.template /nginx.conf.template
 
 EXPOSE ${IMAGE_PROVIDER_PORT}
 
 STOPSIGNAL SIGQUIT
-
-COPY src/image-provider/nginx.conf.template /nginx.conf.template
 
 # Start nginx
 CMD ["/bin/sh" , "-c" , "envsubst '$OTEL_COLLECTOR_HOST $IMAGE_PROVIDER_PORT $OTEL_COLLECTOR_PORT_GRPC $OTEL_SERVICE_NAME' < /nginx.conf.template > /etc/nginx/nginx.conf && cat  /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"]
