[load-generator] Update locustfile for logging with TraceContext (#2265)
* update locustfile for logging with traceContext

Signed-off-by: Shenoy Pratik <pshenoy36@gmail.com>

* update changelog, lint check

Signed-off-by: Shenoy Pratik <pshenoy36@gmail.com>

* remove explicitly adding service name, remove double logging

Signed-off-by: Shenoy Pratik <pshenoy36@gmail.com>

* Update src/load-generator/locustfile.py

Co-authored-by: Juliano Costa <julianocosta89@outlook.com>

* Update src/load-generator/locustfile.py

Co-authored-by: Juliano Costa <julianocosta89@outlook.com>

---------

Signed-off-by: Shenoy Pratik <pshenoy36@gmail.com>
Co-authored-by: Juliano Costa <julianocosta89@outlook.com>

--- a/src/load-generator/requirements.txt
+++ b/src/load-generator/requirements.txt
@@ -11,3 +11,4 @@ opentelemetry-instrumentation-system-metrics==0.55b1
 opentelemetry-instrumentation-urllib3==0.55b1
 opentelemetry-sdk==1.34.1
 opentelemetry-semantic-conventions==0.55b1
+opentelemetry-instrumentation-logging==0.55b1
