using pino-otlp-transport to send log to otel collector (#2352)
* using pino-otlp-transport to send log to otel collector

* modify indentation size

* update changelog

* update changelog

* update changelog

* update changelog

* Update CHANGELOG.md

---------

Co-authored-by: Juliano Costa <julianocosta89@outlook.com>

--- a/src/payment/package.json
+++ b/src/payment/package.json
@@ -27,7 +27,8 @@
     "@opentelemetry/sdk-metrics": "2.0.1",
     "@opentelemetry/sdk-node": "0.203.0",
     "grpc-js-health-check": "1.2.2",
-    "pino": "9.7.0",
+    "pino": "^9.7.0",
+    "pino-opentelemetry-transport": "^1.0.1",
     "simple-card-validator": "1.1.0",
     "uuid": "11.1.0"
   }
