[otel-collector] Add support for OpenSearch dynamic index (#2363)
* Add support for OpenSearch dynamic index

Signed-off-by: Shenoy Pratik <pshenoy36@gmail.com>

* update changelog

Signed-off-by: Shenoy Pratik <pshenoy36@gmail.com>

---------

Signed-off-by: Shenoy Pratik <pshenoy36@gmail.com>
Co-authored-by: Roger Coll <rogercoll@protonmail.com>

--- a/src/grafana/provisioning/datasources/opensearch.yaml
+++ b/src/grafana/provisioning/datasources/opensearch.yaml
@@ -12,7 +12,7 @@ datasources:
     editable: true
     isDefault: false
     jsonData:
-      database: otel
+      database: otel-logs-*
       flavor: opensearch
       logLevelField: severity.text.keyword
       logMessageField: body
