--- a/src/prometheus/prometheus-config.yaml
+++ b/src/prometheus/prometheus-config.yaml
@@ -2,19 +2,30 @@
 # SPDX-License-Identifier: Apache-2.0
 
 global:
-  scrape_interval: 5s
-  scrape_timeout: 3s
-  evaluation_interval: 30s
+  # Align Prometheus scrape interval with the OTel SDKs' export interval for consistency (see OTEL_METRIC_EXPORT_INTERVAL)
+  scrape_interval: 60s
 
 otlp:
+  keep_identifying_resource_attributes: true
   promote_resource_attributes:
     - service.instance.id
     - service.name
     - service.namespace
+    - service.version
     - cloud.availability_zone
     - cloud.region
     - container.name
     - deployment.environment.name
+    - k8s.cluster.name
+    - k8s.container.name
+    - k8s.cronjob.name
+    - k8s.daemonset.name
+    - k8s.deployment.name
+    - k8s.job.name
+    - k8s.namespace.name
+    - k8s.pod.name
+    - k8s.replicaset.name
+    - k8s.statefulset.name
 
 storage:
   tsdb:
