--- a/src/email/Gemfile
+++ b/src/email/Gemfile
@@ -13,3 +13,8 @@ gem "google-protobuf", "~> 4.31.1"
 gem "opentelemetry-sdk",                 "~> 1.8"
 gem "opentelemetry-exporter-otlp",       "~> 0.30.0"
 gem "opentelemetry-instrumentation-all", "~> 0.78.0"
+
+group :test do
+  gem 'minitest', '~> 5.0'
+  gem 'rack-test', '~> 2.0'
+end
