--- a/src/email/Gemfile
+++ b/src/email/Gemfile
@@ -23,3 +23,8 @@ gem "opentelemetry-instrumentation-all",   "~> 0.87"
 
 gem "openfeature-sdk", "~> 0.4"
 gem "openfeature-flagd-provider", "~> 0.1"
+
+group :test do
+  gem 'minitest', '~> 5.0'
+  gem 'rack-test', '~> 2.0'
+end
