--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ env:
   NODE_VERSION: '20'
   PYTHON_VERSION: '3.11'
   DOTNET_VERSION: '8.0'
-  JAVA_VERSION: '17'
-  RUST_VERSION: '1.70.0'
+  JAVA_VERSION: '21'
+  RUST_VERSION: 'stable'
   PHP_VERSION: '8.1'
   RUBY_VERSION: '3.2'
 
