--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -32,18 +32,18 @@ jobs:
       - name: run markdownlint
         run: make markdownlint
 
-  yamllint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: check out code
-        uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-      - name: install yamllint
-        run: make install-yamllint
-      - name: run yamllint
-        run: yamllint . -f github
+  # yamllint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: check out code
+  #       uses: actions/checkout@v4
+  #     - uses: actions/setup-python@v5
+  #       with:
+  #         python-version: '3.x'
+  #     - name: install yamllint
+  #       run: make install-yamllint
+  #     - name: run yamllint
+  #       run: yamllint . -f github
 
   misspell:
     runs-on: ubuntu-latest
