Fix Helm chart release workflow version formatting issues
- Quote version strings in Chart.yaml update sed commands
- Quote version field in Chart.yaml to prevent float64 interpretation
- Resolves Helm lint errors: 'version should be of type string but it's of type float64'

--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Update Chart.yaml with release version
         run: |
-          sed -i "s/^version:.*/version: ${{ steps.version.outputs.version }}/" helm-chart/otel-demo/Chart.yaml
-          sed -i "s/^appVersion:.*/appVersion: ${{ steps.version.outputs.version }}/" helm-chart/otel-demo/Chart.yaml
+          sed -i "s/^version:.*/version: \"${{ steps.version.outputs.version }}\"/" helm-chart/otel-demo/Chart.yaml
+          sed -i "s/^appVersion:.*/appVersion: \"${{ steps.version.outputs.version }}\"/" helm-chart/otel-demo/Chart.yaml
 
       - name: Lint Helm chart
         run: |
