chore: Remove generated protobuf files from version control
Generated protobuf files should not be committed to the repository.
Updated .gitignore to exclude src/currency/build/generated/

Co-Authored-By: rnjn <runjan@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,6 @@ test/tracetesting/tracetesting-vars.yaml
 # Android
 *.apk
 
-!src/currency/build
+src/currency/build/generated/
 src/cart/src/Program.cs.bak
 src/flagd/demo.flagd.json.bak
